--- a/django_haystack_sample/templates/index.html
+++ b/django_haystack_sample/templates/index.html
@@ -41,32 +41,30 @@
 
     {% block content %}
 
-    <div class="row">
-        <div class="span12">
-            <div class="hero-unit">
-                <h1>
-                    Searchly Sample Django Application.</h1>
-                <br/>
+        <div class="row">
+            <div class="span12">
+                <div class="hero-unit">
+                    <h1>
+                        Searchly Sample Django Application.</h1>
+                    <br/>
 
-                <p>
-                    This example illustrates basic search features of SearchBox.io (ElasticSearch as
-                    service).</p>
+                    <p>
+                        This example illustrates basic search features of Searchly (ElasticSearch as
+                        service).</p>
 
-                <p>
-                    Each CRUD operation on documents is reflected to search index in real time.</p>
+                    <p>
+                        Each CRUD operation on documents is reflected to search index in real time.</p>
 
-                <p>
-                    To test SearchBox.io's search features login to admin screen and create new documents.</p>
+                    <p>
+                        To test SearchBox.io's search features login to admin screen and create new documents.</p>
 
-                <p>
-                    Sample application is using <a href="http://haystacksearch.org/">Haystack</a> moduler search
-                    for Django and
-                    <a href="https://github.com/toastdriven/pyelasticsearch">pyelasticsearch (toastdriven fork) </a>
-                    Python ElasticSearch
-                    client to integrate with SearchBox.io.</p>
+                    <p>
+                        Sample application is using <a href="http://haystacksearch.org/">Haystack</a> moduler search
+                        for Django.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 
     {% endblock %}
 
