--- a/django_haystack_sample/templates/index.html
+++ b/django_haystack_sample/templates/index.html
@@ -49,14 +49,14 @@
                     <br/>
 
                     <p>
-                        This example illustrates basic search features of Searchly (ElasticSearch as
-                        service).</p>
+                        This example illustrates basic search features of [Searchly](http://www.searchly.com) (Search as a service powered by Elastisearch).
+                    </p>
 
                     <p>
                         Each CRUD operation on documents is reflected to search index in real time.</p>
 
                     <p>
-                        To test SearchBox.io's search features login to admin screen and create new documents.</p>
+                        To test Searchly's search features login to admin screen and create new documents.</p>
 
                     <p>
                         Sample application is using <a href="http://haystacksearch.org/">Haystack</a> moduler search
