--- a/django_haystack_sample/templates/index.html
+++ b/django_haystack_sample/templates/index.html
@@ -49,7 +49,7 @@
                     <br/>
 
                     <p>
-                        This example illustrates basic search features of [Searchly](http://www.searchly.com) (Search as a service powered by Elastisearch).
+                        This example illustrates basic search features of [Searchly](http://www.searchly.com) (Search as a service powered by [Elastisearch](http://www.elasticsearch.org)).
                     </p>
 
                     <p>
