--- a/django_haystack_sample/templates/index.html
+++ b/django_haystack_sample/templates/index.html
@@ -49,7 +49,8 @@
                     <br/>
 
                     <p>
-                        This example illustrates basic search features of [Searchly](http://www.searchly.com) (Search as a service powered by [Elastisearch](http://www.elasticsearch.org)).
+                        This example illustrates basic search features of <a href="http://www.searchly.com">Searchly</a>
+                        (Search as a service powered by <a href="http://www.elasticsearch.org">Elastisearch</a>).
                     </p>
 
                     <p>
