--- a/django_haystack_sample/templates/index.html
+++ b/django_haystack_sample/templates/index.html
@@ -49,8 +49,8 @@
                     <br/>
 
                     <p>
-                        This example illustrates basic search features of <a href="http://www.searchly.com">Searchly</a>
-                        (Search as a service powered by <a href="http://www.elasticsearch.org">Elastisearch</a>).
+                        This example illustrates basic search features of <a href="http://www.searchly.com" target="_blank">Searchly</a>
+                        (Search as a service powered by <a href="http://www.elasticsearch.org" target="_blank">Elastisearch</a>).
                     </p>
 
                     <p>
@@ -60,7 +60,7 @@
                         To test Searchly's search features login to admin screen and create new documents.</p>
 
                     <p>
-                        Sample application is using <a href="http://haystacksearch.org/">Haystack</a> moduler search
+                        Sample application is using <a href="http://haystacksearch.org/" target="_blank">Haystack</a> moduler search
                         for Django.
                     </p>
                 </div>
